--- a/main/main.html
+++ b/main/main.html
@@ -25,12 +25,9 @@
 		</template>
 
 
-		<form method="post" enctype="multipart/form-data" id="cform">
-			<div class="drop-zone">
-				<span class="drop-zone__prompt">Drop file here or click to upload</span>
-			</div>
-		</form>
-
+		<div id="drop-zone">
+			<span class="drop-zone__prompt">Drop file here or click to upload</span>
+		<div>
 
 		<script src="/main/main.js" type="text/javascript"></script>
 	</body>
