--- a/main/main.html
+++ b/main/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>Cloud</title>
@@ -26,9 +25,14 @@
 		</template>
 
 
-		<div id="drop-zone">
-			<span class="drop-zone__prompt">Drop file here or click to upload</span>
-		<div>
+		<form method="post" enctype="multipart/form-data" id="cform">
+			<div class="drop-zone">
+				<span class="drop-zone__prompt">Drop file here or click to upload</span>
+				<input type="file" name="file" id="file" class="drop-zone__input">
+				<input type="submit">
+			</div>
+		</form>
+
 
 		<script src="/main/main.js" type="text/javascript"></script>
 	</body>
