--- a/main/main.html
+++ b/main/main.html
@@ -3,6 +3,8 @@
 		<title>Cloud</title>
 		<link rel="icon" type="image/png" href="/main/images/icon.png">
 		<link rel="stylesheet" href="/main/main.css">
+		<link rel="stylesheet" href="/main/theme.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 
@@ -30,5 +32,6 @@
 		<div>
 
 		<script src="/main/main.js" type="text/javascript"></script>
+		<script src="/main/theme.js" type="text/javascript"></script>
 	</body>
 </html>
